--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -259,31 +259,22 @@ jobs:
           WFONE_NOTIFICATIONS_API_IMAGE: ${{vars.REGISTRY}}/${{ github.repository_owner }}/${{ vars.NOTIFICATIONS_API_IMAGE }}:${{ inputs.IMAGE_TAG }}
 
           #WFONE-PUSH-NOTIFICATION-API 
-          WFONE_PUSH_NOTIFICATION_DATASOURCE_URL: ${{ vars.WFONE_PUSH_NOTIFICATION_DATASOURCE_URL }}
-          WFONE_PUSH_NOTIFICATION_DATASOURCE_USERNAME: ${{ vars.WFONE_PUSH_NOTIFICATION_DATASOURCE_USERNAME }}
-          WFONE_PM_SQS_S3_BUCKET_NAME: ${{ vars.WFONE_PM_SQS_S3_BUCKET_NAME }}
-          WFONE_PUSH_NOTIFICATION_MAX_CONNECTIONS:  ${{ vars.WFONE_PUSH_NOTIFICATION_MAX_CONNECTIONS }}
-          WFONE_PUSH_NOTIFICATION_EXPIRE_HOURS:  ${{ vars.WFONE_PUSH_NOTIFICATION_EXPIRE_HOURS }}
-          WFONE_SQS_QUEUE_NOTIFICATION_URL: ${{ vars.WFONE_SQS_QUEUE_NOTIFICATION_URL }}
-          WFONE_SQS_QUEUE_NOTIFICATION_URL_ACTIVE_FIRES: ${{ vars.WFONE_SQS_QUEUE_NOTIFICATION_URL_ACTIVE_FIRES }}
-          WFONE_SQS_QUEUE_NOTIFICATION_URL_BANS_PROHIBITIONS: ${{ vars.WFONE_SQS_QUEUE_NOTIFICATION_URL_BANS_PROHIBITIONS }}
-          WFONE_SQS_QUEUE_NOTIFICATION_URL_AREA_RESTRICTIONS: ${{ vars.WFONE_SQS_QUEUE_NOTIFICATION_URL_AREA_RESTRICTIONS }}
-          WFONE_SQS_QUEUE_NOTIFICATION_URL_EVAC_ORDERS: ${{ vars.WFONE_SQS_QUEUE_NOTIFICATION_URL_EVAC_ORDERS }}
-          WFONE_PUSH_NOTIFICATION_SQS_MONITOR_ATTRIBUTE: ${{ vars.WFONE_PUSH_NOTIFICATION_SQS_MONITOR_ATTRIBUTE }}
-          WFONE_PUSH_NOTIFICATION_SQS_MAX_MESSAGES: ${{ vars.WFONE_PUSH_NOTIFICATION_SQS_MAX_MESSAGES }}
-          WFONE_PUSH_NOTIFICATION_SQS_WAIT_SECONDS: ${{ vars.WFONE_PUSH_NOTIFICATION_SQS_WAIT_SECONDS }}
-          WFONE_PUSH_NOTIFICATION_CONSUMER_INTERVAL_SECONDS: ${{ vars.WFONE_PUSH_NOTIFICATION_CONSUMER_INTERVAL_SECONDS }}
+          WFONE_NOTIFICATIONS_PUSH_SQS_MONITOR_ATTRIBUTE: ${{ vars.WFONE_PUSH_NOTIFICATION_SQS_MONITOR_ATTRIBUTE }}
+          WFONE_NOTIFICATIONS_PUSH_SQS_MAX_MESSAGES: ${{ vars.WFONE_PUSH_NOTIFICATION_SQS_MAX_MESSAGES }}
+          WFONE_NOTIFICATIONS_PUSH_SQS_WAIT_SECONDS: ${{ vars.WFONE_PUSH_NOTIFICATION_SQS_WAIT_SECONDS }}
+          WFONE_NOTIFICATIONS_PUSH_CONSUMER_INTERVAL_SECONDS: ${{ vars.WFONE_PUSH_NOTIFICATION_CONSUMER_INTERVAL_SECONDS }}
           WFONE_PUSH_ITEM_EXPIRE_HOURS_EVAC: ${{ vars.WFONE_PUSH_ITEM_EXPIRE_HOURS_EVAC }}
           WFONE_PUSH_ITEM_EXPIRE_HOURS_FIRE: ${{ vars.WFONE_PUSH_ITEM_EXPIRE_HOURS_FIRE }}
           WFONE_PUSH_ITEM_EXPIRE_HOURS_BAN: ${{ vars.WFONE_PUSH_ITEM_EXPIRE_HOURS_BAN }}
           WFONE_PUSH_ITEM_EXPIRE_HOURS_RESTRICTED_AREA: ${{ vars.WFONE_PUSH_ITEM_EXPIRE_HOURS_RESTRICTED_AREA }}
           WFONE_FIREBASE_DB_URL: ${{ vars.WFONE_FIREBASE_DB_URL }}
-          WFONE_PUSH_NOTIFICATION_PREFIX: ${{ vars.DEFAULT_APPLICATION_ENVIRONMENT }}
-          WFONE_PUSH_NOTIFICATION_NEAR_ME_INTERVAL_SECONDS: ${{ vars.WFONE_PUSH_NOTIFICATION_NEAR_ME_INTERVAL_SECONDS }}
-          WFONE_PUSH_NOTIFICATION_AWS_ACCESS_KEY: ${{ secrets.WFONE_PUSH_NOTIFICATION_AWS_ACCESS_KEY }}
-          WFONE_PUSH_NOTIFICATION_AWS_SECRET_KEY: ${{ secrets.WFONE_PUSH_NOTIFICATION_AWS_SECRET_KEY }}
-          WFONE_PUSH_NOTIFICATION_DATASOURCE_PASSWORD: ${{ secrets.WFONE_PUSH_NOTIFICATION_DATASOURCE_PASSWORD }}
+          WFONE_NOTIFICATIONS_PUSH_PREFIX: ${{ vars.DEFAULT_APPLICATION_ENVIRONMENT }}
+          WFONE_NOTIFICATIONS_PUSH_NEAR_ME_INTERVAL_SECONDS: ${{ vars.WFONE_PUSH_NOTIFICATION_NEAR_ME_INTERVAL_SECONDS }}
+          WFONE_NOTIFICATIONS_PUSH_AWS_ACCESS_KEY: ${{ secrets.WFONE_PUSH_NOTIFICATION_AWS_ACCESS_KEY }}
+          WFONE_NOTIFICATIONS_PUSH_AWS_SECRET_KEY: ${{ secrets.WFONE_PUSH_NOTIFICATION_AWS_SECRET_KEY }}
           WFONE_DB_PASS: ${{ secrets.WFONE_DB_PASS }}
+          WFONE_NOTIFICATIONS_PUSH_API_IMAGE: ${{vars.REGISTRY}}/${{ github.repository_owner }}/${{ vars.NOTIFICATIONS_PUSH_API_IMAGE }}:${{ inputs.IMAGE_TAG }}
+
 
         run: terragrunt apply --terragrunt-non-interactive -auto-approve
 
