--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -55,14 +55,6 @@ jobs:
           NPMRC: ${{ secrets.NPMRC }}
         run: echo -e -n "$NPMRC" > .npmrc
 
-      - name: Read npmrc file
-        working-directory: ${{ env.ANGULAR_DIRECTORY }}
-        run: cat .npmrc
-
-      - name: Check npm config
-        working-directory: ${{ env.ANGULAR_DIRECTORY }}
-        run: npm config ls -l
-
       - name: Get XML Info
         id: version
         uses: mavrosxristoforos/get-xml-info@1.1.1
@@ -149,7 +141,12 @@ jobs:
         env:
           GOOGLE_FILE: ${{ secrets.GOOGLE_SERVICE_INFO_PLIST_BASE64 }}
         run: |
-          echo -n "$GOOGLE_FILE" > GoogleService-Info.plist
+          echo -e -n "$GOOGLE_FILE" > GoogleService-Info.plist
+
+      - name: Print google file
+        working-directory: "${{ env.ANGULAR_DIRECTORY }}/ios/App/App"
+        run: |
+          cat GoogleService-Info.plist
 
       - name: Install the Apple certificate and provisioning profile
         env:
