Fix for b64 Google Service File

--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -141,12 +141,7 @@ jobs:
         env:
           GOOGLE_FILE: ${{ secrets.GOOGLE_SERVICE_INFO_PLIST_BASE64 }}
         run: |
-          echo -e -n "$GOOGLE_FILE" > GoogleService-Info.plist
-
-      - name: Print google file
-        working-directory: "${{ env.ANGULAR_DIRECTORY }}/ios/App/App"
-        run: |
-          cat GoogleService-Info.plist
+          echo "$GOOGLE_FILE" | base64 --decode --ignore-garbage > google-services.json
 
       - name: Install the Apple certificate and provisioning profile
         env:
