--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -141,7 +141,7 @@ jobs:
         env:
           GOOGLE_FILE: ${{ secrets.GOOGLE_SERVICE_INFO_PLIST_BASE64 }}
         run: |
-          echo "$GOOGLE_FILE" | base64 --decode --ignore-garbage > google-services.json
+          echo "$GOOGLE_FILE" | base64 --decode -e > GoogleService-Info.plist
 
       - name: Install the Apple certificate and provisioning profile
         env:
