--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -123,6 +123,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
+          cache: 'npm'
+          cache-dependency-path: '**/package.json'
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -163,7 +165,7 @@ jobs:
         with:
           build-type: "bundle"
           gradle-task: "bundleRelease"
-          increment-build-number: true
+          increment-build-number: ${{ inputs.upload_to_play_store }}
           package-name: ${{ secrets.KEYSTORE_ALIAS }}
           keystore-content: ${{ secrets.KEYSTORE_CONTENT }}
           keystore-password: ${{ secrets.KEYSTORE_PASSWORD }}
