PointID Variables update

--- a/.github/workflows/terragrunt-plan.yml
+++ b/.github/workflows/terragrunt-plan.yml
@@ -138,10 +138,11 @@ jobs:
           WEBADE_OAUTH2_CLIENT_SCOPES: ${{vars.WEBADE_OAUTH2_CLIENT_SCOPES }}
           FIREWEATHER_BASEURL: ${{vars.FIREWEATHER_BASEURL }}
           FIREWEATHER_QUEUESIZE: ${{vars.FIREWEATHER_QUEUESIZE }}
+          FIREWEATHER_STATIONS_KEY: ${{vars.FIREWEATHER_STATIONS_KEY }}
           WFNEWS_QUEUESIZE: ${{vars.WFNEWS_QUEUESIZE }}
           DATABASE_WEATHER_PWD: ${{secrets.DATABASE_WEATHER_PWD }}
           WEATHER_PASSWORD: ${{secrets.WEATHER_PASSWORD }}
-          WEBADE_OAUTH2_CLIENT_SECRET: ${{secrets.WEBADE_OAUTH2_CLIENT_SECRET }}
+          POINTID_WEBADE_OAUTH2_CLIENT_SECRET: ${{secrets.WEBADE_OAUTH2_CLIENT_SECRET }}
           POINTID_IMAGE: ${{vars.REGISTRY}}/${{ github.repository_owner }}/${{ vars.POINTID_IMAGE }}:pr-877
 
           # WFONE NOTIFICATIONS API
