--- a/server/wfss-pointid-api/wfss-pointid-api-rest-endpoints/src/main/resources/application-secrets.properties
+++ b/server/wfss-pointid-api/wfss-pointid-api-rest-endpoints/src/main/resources/application-secrets.properties
@@ -1,5 +1,5 @@
 # Point ID secrets
-weather.user=#{cfg_weather_user}
-weather.password=#{cfg_weather_password}
-webade.oauth2.client.secret=#{cfg_webade_oauth2_client_secret}
+weather.user=#{WEATHER_USER}
+weather.password=#{WEATHER_PASSWORD}
+webade.oauth2.client.secret=#{POINTID_WEBADE_OAUTH2_CLIENT_SECRET}
 
