--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -137,7 +137,9 @@ jobs:
 
       - name: Install app dependencies
         working-directory: ${{ env.ANGULAR_DIRECTORY }}
-        run: npm install --legacy-peer-deps
+        run: |
+          export NODE_OPTIONS="--max_old_space_size=4096"
+          npm install --legacy-peer-deps
 
       - name: Prepare app for build
         working-directory: ${{ env.ANGULAR_DIRECTORY }}
