Auto increment build number

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -167,6 +167,7 @@ jobs:
         with:
           build-type: "bundle"
           gradle-task: "bundleRelease"
+          increment-build-number: ${{ inputs.upload_to_play_store }}
           package-name: ${{ vars.PACKAGE_NAME_PLAY_STORE }}
           keystore-content: ${{ secrets.KEYSTORE_CONTENT }}
           keystore-password: ${{ secrets.KEYSTORE_PASSWORD }}
