--- a/server/wfss-pointid-api/wfss-pointid-api-rest-endpoints/src/main/resources/application.properties
+++ b/server/wfss-pointid-api/wfss-pointid-api-rest-endpoints/src/main/resources/application.properties
@@ -14,11 +14,11 @@ wfArcGis.layer.Fire.Centre.Boundaries=#{WFARCGIS_LAYER_FIRE_CENTRE_BOUNDARIES}
 wfArcGis.queueSize=#{WFARCGIS_QUEUESIZE}
 
 weather.host=#{WEATHER_HOST}
-max.allowed.radius=#{POINTID_MAX_ALLOWED_RADIUS}
-async.job.interval=#{POINTID_ASYNC_JOB_INTERVAL}
-async.job.ref.lat=#{POINTID_ASYNC_JOB_REF_LAT}
-async.job.ref.lon=#{POINTID_ASYNC_JOB_REF_LONG}
-async.job.ref.radius=#{POINTID_ASYNC_JOB_REF_LONG}
+max.allowed.radius=#{MAX_ALLOWED_RADIUS}
+async.job.interval=#{ASYNC_JOB_INTERVAL}
+async.job.ref.lat=#{ASYNC_JOB_REF_LAT}
+async.job.ref.lon=#{ASYNC_JOB_REF_LONG}
+async.job.ref.radius=#{ASYNC_JOB_REF_LONG}
 
 #For oracle access
 database.weather.url=#{DATABASE_WEATHER_URL}
@@ -26,12 +26,12 @@ database.weather.user=#{DATABASE_WEATHER_USER}
 database.weather.pwd=#{DATABASE_WEATHER_PWD}
 
 # WFWX Fireweather API access
-webade.oauth2.client.id=#{POINTID_WEBADE_OAUTH2_CLIENT_ID}
-webade.oauth2.token.url=#{POINTID_WEBADE_OAUTH2_TOKEN_URL}
-webade.oauth2.client.scopes=#{POINTID_WEBADE_OAUTH2_CLIENT_SCOPES}
+webade.oauth2.client.id=#{WEBADE_OAUTH2_CLIENT_ID}
+webade.oauth2.token.url=#{WEBADE_OAUTH2_TOKEN_URL}
+webade.oauth2.client.scopes=#{WEBADE_OAUTH2_CLIENT_SCOPES}
 fireweather.baseUrl=#{FIREWEATHER_BASEURL}
 fireweather.queueSize=#{FIREWEATHER_QUEUESIZE}
 fireweather.stations.key=#{FIREWEATHER_STATIONS_KEY}
 
-wfnews.baseUrl=#{WFNEWS_BASEURL}
-wfnews.queueSize=#{WFNEWS_QUEUESIZE}
+wfnews.baseUrl=#{cfg_wfnews_baseurl}
+wfnews.queueSize=#{cfg_wfnews_queueSize}
