--- a/server/wfss-pointid-api/wfss-pointid-api-rest-endpoints/src/main/resources/application.properties
+++ b/server/wfss-pointid-api/wfss-pointid-api-rest-endpoints/src/main/resources/application.properties
@@ -33,5 +33,5 @@ fireweather.baseUrl=#{FIREWEATHER_BASEURL}
 fireweather.queueSize=#{FIREWEATHER_QUEUESIZE}
 fireweather.stations.key=#{FIREWEATHER_STATIONS_KEY}
 
-wfnews.baseUrl=#{cfg_wfnews_baseurl}
-wfnews.queueSize=#{cfg_wfnews_queueSize}
+wfnews.baseUrl=#{WFNEWS_BASEURL}
+wfnews.queueSize=#{WFNEWS_QUEUESIZE}
