Corrcet radius property

--- a/server/wfss-pointid-api/wfss-pointid-api-rest-endpoints/src/main/resources/application.properties
+++ b/server/wfss-pointid-api/wfss-pointid-api-rest-endpoints/src/main/resources/application.properties
@@ -18,7 +18,7 @@ max.allowed.radius=#{MAX_ALLOWED_RADIUS}
 async.job.interval=#{ASYNC_JOB_INTERVAL}
 async.job.ref.lat=#{ASYNC_JOB_REF_LAT}
 async.job.ref.lon=#{ASYNC_JOB_REF_LONG}
-async.job.ref.radius=#{ASYNC_JOB_REF_LONG}
+async.job.ref.radius=#{ASYNC_JOB_REF_RADIUS
 
 #For oracle access
 database.weather.url=#{DATABASE_WEATHER_URL}
