Environment variables updates for pointid-api & notification-push-api (#958)
* Update notification-push-api PropertiesSpringConfig.java

* PointID Variables update

* Resolve merge conflict

* Remove pointid prefixes

* Update application.properties

* Update application.properties

* Corrcet radius property

* Corrcet radius property

---------

Co-authored-by: Dylan <dylan.hemsworth@gmail.com>

--- a/server/wfss-pointid-api/wfss-pointid-api-rest-endpoints/src/main/resources/application.properties
+++ b/server/wfss-pointid-api/wfss-pointid-api-rest-endpoints/src/main/resources/application.properties
@@ -9,7 +9,7 @@ wfArcGis.layer.Bans.Prohibition.Areas=#{WFARCGIS_LAYER_BANS_PROHIBITION_AREAS}
 wfArcGis.layer.Danger.Rating=#{WFARCGIS_LAYER_DANGER_RATING}
 wfArcGis.layer.ActiveFires=#{WFARCGIS_LAYER_ACTIVE_FIRES}
 wfArcGis.layer.Evacuation.Orders.Alerts=#{WFARCGIS_LAYER_EVACUATION_ORDERS_ALERTS}
-wfArcGis.layer.Fire.Centre.Boundaries=#{WFARGIS_LAYER_FIRE_CENTRE_BOUNDARIES}
+wfArcGis.layer.Fire.Centre.Boundaries=#{WFARCGIS_LAYER_FIRE_CENTRE_BOUNDARIES}
 
 wfArcGis.queueSize=#{WFARCGIS_QUEUESIZE}
 
@@ -31,8 +31,7 @@ webade.oauth2.token.url=#{WEBADE_OAUTH2_TOKEN_URL}
 webade.oauth2.client.scopes=#{WEBADE_OAUTH2_CLIENT_SCOPES}
 fireweather.baseUrl=#{FIREWEATHER_BASEURL}
 fireweather.queueSize=#{FIREWEATHER_QUEUESIZE}
-
-fireweather.stations.key=British_Columbia_Fire_Service_Weather_Stations
+fireweather.stations.key=#{FIREWEATHER_STATIONS_KEY}
 
 wfnews.baseUrl=#{WFNEWS_BASEURL}
 wfnews.queueSize=#{WFNEWS_QUEUESIZE}
