--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -123,6 +123,7 @@ jobs:
       SNS_EMAIL_TARGETS: ${{ secrets.SNS_EMAIL_TARGETS_DEV }}
       TFC_TEAM_TOKEN: ${{ secrets.TFC_TEAM_TOKEN }}
       WEATHER_PASSWORD: ${{ secrets.WEATHER_PASSWORD_DEV }}
+      POINTID_WEBADE_OAUTH2_CLIENT_SECRET: ${{ secrets.POINTID_WEBADE_OAUTH2_CLIENT_SECRET }}
       WEBADE_OAUTH2_CLIENT_SECRET: ${{ secrets.WEBADE_OAUTH2_CLIENT_SECRET_DEV }}
       WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET: ${{ secrets.DEV_WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET }}
       WEBADE_OAUTH2_WFNEWS_UI_CLIENT_SECRET: ${{ secrets.DEV_WEBADE_OAUTH2_WFNEWS_UI_CLIENT_SECRET}}
