--- a/client/wfnews-war/src/main/angular/ios/App/App/Info.plist
+++ b/client/wfnews-war/src/main/angular/ios/App/App/Info.plist
@@ -21,6 +21,16 @@
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
+	<key>NSCameraUsageDescription</key>
+	<string>To take photos of wildfires</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>App requires user&apos;s current location to center map and show incidents around user&apos;s location.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>App requires user&apos;s location to determine whether user is near a wildfire and must be sent an alert</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>To add photos from library to app</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>To Pick Photos from Library</string>
 	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
